# nbodysim

./: README.md  display.py  generate_solar_objects.py  kepler.py  objects.csv  plot_dynamics.py
NBodySim/: CMakeLists.txt  Simulation.cpp  Simulation.h  main.cpp
